--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^3.2.0",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "xlsx": "^0.18.5"
   }
 }
